--- a/irankar/irankar/Style/Default.css
+++ b/irankar/irankar/Style/Default.css
@@ -31,9 +31,9 @@ a {
     top: 22.5pt;
     z-index: 1020;
 }
-#Content-Blog {
+/*#Content-Blog {
 	height: 700px;
-}
+}*/
 
 .text-secondary {
   font-weight: bold!important;
@@ -95,6 +95,9 @@ font-size:14px;
 .carousel-inner {
 height:500px;
 }
+.carousel-inner-cust {
+height:400px!important;
+}
 .Indicator-footer {
     height:59.2px;
     background-color:rgb(101,100,98);
@@ -147,7 +150,7 @@ padding-left: 0%;
 .dropdown-menu {
 
   float: left!important;
-  min-width: 4rem!important;
+  min-width: 3rem!important;
   background-color: #d1d3d4!important;
   border: 0!important;
   border-radius: 0!important;
@@ -156,8 +159,8 @@ padding-left: 0%;
 
 .nav-pills .nav-link {
 border-radius:0!important;
-height: 40px;
-width: 100px;
+height: 33px;
+width: 108px;
 }
 
 .container-fluid {
@@ -177,9 +180,20 @@ width: 100px;
 height:536px;
 }
 
-#contents p {
+#contents p  {
     color:black;
 }
+.Parent-Tab a {
+color:#f5f5f5!important;
+font-weight: bold;
+justify-content: center;
+align-items: center;
+display: flex;
+}
+.Parent-Tab .nav-item {
+    text-align:center;
+}
+
 /*Classes Content*/
 
 /*Classes content-blog*/
@@ -193,21 +207,61 @@ height:336px!important;
 }
 
 .item-blog {
-height:490px;
+height:336px;
 max-width:100%;
 border: solid 1px #d6d6d6;
 background-color: #f2f3f4;
 }
+.item-blog img {
+height:250.5px;    
+    }
 .blog-image {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 7px;
 }
 
 .carousel-control-next,
 .carousel-control-prev {
     width:5%!important;
 }
+/*#Content-Blog .carousel-item {
+width:93%!important;
+}*/
+#Content-Blog{
+padding-left:0px!important;
+padding-right:0px!important;
+}
+.item-blog-desc {
+height:100px;
+}
+.zoom {
+  transition: transform .2s;
+  top:26px;
+}
+.zoom:hover {
+-ms-transform: scale(1.5); /* IE 9 */
+-webkit-transform: scale(1.5); /* Safari 3-8 */
+transform: scale(1.10); 
+z-index:10000;
+    }
+    .zoom:hover .item-blog {
+        border: solid 1px #00a693;
+		
+    }
+    .zoom:hover p {
+    color: white!important;
+    }
+   .zoom:hover .item-blog-desc {
+    background-color:#00a693;
+	
+    }
+	
+	#description-blog{
+		color:black;
+	padding-bottom:15px;
+	text-align: justify;
+	}
 /*Classes content-blog*/
 
 /*classes content-about*/
@@ -221,6 +275,15 @@ hr.line {
   border-top: 2px solid #d3d3d5;
 }
 
+.about-menu {
+border-bottom: solid;
+border-top: solid; 
+border-color: #d3d3d5; 
+border-bottom-width: 2px; 
+border-top-width: 2px;
+padding-left:0px!important;
+padding-right:0px!important;
+}
 /*classes content-about*/
 
 
@@ -266,10 +329,10 @@ color:#666666;
 }
 /* Classes content-right*/
 .image-post {
-height:194.6px;
+height:240px;
 }
 .image-post img {
-width:75%;
+width:100%;
 height:100%;
 }
 .desc-image {
@@ -283,10 +346,11 @@ padding-right:0;
 padding-left:0;
 }
 
-.title-post {
-font-size:16px;
-line-height:1.2;
-color:#424242;
+.title-post {	
+font-size:16px;	
+line-height:1.2;	
+color:#595a5b;	
+font-weight:bold;	
 }
 
 .short-desc {
@@ -301,8 +365,10 @@ width:100%;
 height:162.3px;
 }
 
-.footer-post {
-color:#929292;
+.footer-post {	
+color:#929292!important;	
+font-weight: bold;	
+font-size: 12pt;	
 }
 
 .page-link {
@@ -463,3 +529,44 @@ border-radius: 2px; }
   outline: 0;
   box-shadow: 0 0 0 0.1rem #00a693;
 }
+
+.brand-background {
+background-color: #e8e7e6;
+}	
+.desc-image {
+background-color:#eceaea;
+margin-top: 30px;
+padding: 10px 10px 1px 10px;
+text-align: justify;
+font-weight: bold;
+color: #58595b;
+}
+.search-inner-header {
+	color: #33b8a9!important;
+	font-weight: bold!important;
+	font-size: 20px;
+	margin-top: 40px;
+}
+.search-inner-content {
+	color: black!important;
+	font-weight: regular!important;
+	font-size: 17px;
+}
+.form-control-search {
+background-color:#eae8e8; 
+  border: 0!important;
+  border-radius: 0!important;
+}
+.form-control-search:focus {
+	background-color:#eae8e8; 
+  border-color: #00a693!important;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #00a693!important;
+}
+
+
+
+
+
+
+
